[package]
name = "honey-health"
version = "0.3.3"
edition = "2021"
authors = ["Jeremy Blythe <jeremyblythe@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
dotenv = "0.15.0"
glob = "0.3.1"
honeycomb-client = { git = "https://github.com/jerbly/honeycomb-client", tag = "v0.1.1" }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
strsim = "0.10.0"
tokio = { version = "1.35.1", features = ["full"] }
