[package]
name = "honey-health"
version = "0.5.4"
edition = "2021"
authors = ["Jeremy Blythe <jeremyblythe@gmail.com>"]
repository = "https://github.com/jerbly/honey-health"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
glob = "0.3.2"
honeycomb-client = { git = "https://github.com/jerbly/honeycomb-client", tag = "0.2.3" }
#honeycomb-client = { path = "../honeycomb-client" }
indicatif = "0.17.9"
octocrab = "0.43.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
strsim = "0.11.1"
tokio = { version = "1.43.0", features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
